Changing for MS DI container to support IEnumerable injection and aggregate TextProviders

--- a/Templates/Template.Mobile/Template.Mobile.csproj
+++ b/Templates/Template.Mobile/Template.Mobile.csproj
@@ -31,8 +31,8 @@
   <ItemGroup>
     <PackageReference Include="Acr.UserDialogs" Version="7.1.0.442" />
     <PackageReference Include="Nito.AsyncEx" Version="5.0.0" />
-    <PackageReference Include="Prism.DryIoc.Extensions" Version="7.2.0.898" />
     <PackageReference Include="Prism.Forms.Extended" Version="7.2.0.898" />
+    <PackageReference Include="Prism.Microsoft.DependencyInjection.Extensions" Version="7.2.0.898" />
     <PackageReference Include="Prism.Plugin.Popups" Version="7.2.0.759" />
     <PackageReference Include="ReactiveUI.Fody" Version="11.3.1" />
     <PackageReference Include="Shiny.Core" Version="1.1.0.1473" />
@@ -67,8 +67,20 @@
     <Compile Update="Resources\Dictionaries\Styles.xaml.cs">
       <DependentUpon>Styles.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Resources\Text\MobileTextResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>MobileTextResources.resx</DependentUpon>
+    </Compile>
     <Compile Update="Views\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
     </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\Text\MobileTextResources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>MobileTextResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
