--- a/Templates/Template.Mobile.Android/Template.Mobile.Android.csproj
+++ b/Templates/Template.Mobile.Android/Template.Mobile.Android.csproj
@@ -61,10 +61,10 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>7.1.0.442</Version>
     </PackageReference>
-    <PackageReference Include="Prism.DryIoc.Extensions">
+    <PackageReference Include="Prism.Forms.Extended">
       <Version>7.2.0.898</Version>
     </PackageReference>
-    <PackageReference Include="Prism.Forms.Extended">
+    <PackageReference Include="Prism.Microsoft.DependencyInjection.Extensions">
       <Version>7.2.0.898</Version>
     </PackageReference>
     <PackageReference Include="Prism.Plugin.Popups">
