--- a/Templates/Template.Mobile.Android/Template.Mobile.Android.csproj
+++ b/Templates/Template.Mobile.Android/Template.Mobile.Android.csproj
@@ -82,6 +82,12 @@
     <PackageReference Include="glidex.forms">
       <Version>2.0.1.394</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection">
+      <Version>3.1.4</Version>
+    </PackageReference>
+    <PackageReference Include="Plugin.CurrentActivity">
+      <Version>2.1.0.4</Version>
+    </PackageReference>
     <PackageReference Include="Prism.Forms.Extended">
       <Version>7.2.0.1054</Version>
     </PackageReference>
@@ -107,15 +113,17 @@
       <Version>7.2.0.1054</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Essentials.Interfaces">
-      <Version>1.5.3.1</Version>
+      <Version>1.5.3.2</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.6.0.726" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.1" />
+    <PackageReference Include="Xamarin.Forms" Version="4.6.0.800" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.Forms.Visual.Material">
-      <Version>4.6.0.726</Version>
+      <Version>4.6.0.800</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\PlatformTheme.cs" />
+    <Compile Include="Renderers\AndroidMaterialTimePickerRenderer.cs" />
     <Compile Include="Renderers\AndroidMaterialDatePickerRenderer.cs" />
     <Compile Include="Renderers\AndroidMaterialStepperRenderer.cs" />
     <Compile Include="SplashActivity.cs" />
