--- a/Templates/Template.Mobile.iOS/Template.Mobile.iOS.csproj
+++ b/Templates/Template.Mobile.iOS/Template.Mobile.iOS.csproj
@@ -67,6 +67,9 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="Renderers\iOSMaterialStepperRenderer.cs" />
+    <Compile Include="Renderers\iOSMaterialDatePickerRenderer.cs" />
+    <Compile Include="Renderers\iOSMaterialTimePickerRenderer.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -158,6 +161,9 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>7.1.0.442</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection">
+      <Version>3.1.4</Version>
+    </PackageReference>
     <PackageReference Include="Prism.Forms.Extended">
       <Version>7.2.0.1054</Version>
     </PackageReference>
@@ -183,15 +189,15 @@
       <Version>7.2.0.1054</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Essentials.Interfaces">
-      <Version>1.5.3.1</Version>
+      <Version>1.5.3.2</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.6.0.726" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.1" />
+    <PackageReference Include="Xamarin.Forms" Version="4.6.0.800" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.Forms.Nuke">
       <Version>8.4.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms.Visual.Material">
-      <Version>4.6.0.726</Version>
+      <Version>4.6.0.800</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
