--- a/Templates/Template.Mobile/Template.Mobile.csproj
+++ b/Templates/Template.Mobile/Template.Mobile.csproj
@@ -44,10 +44,10 @@
     <PackageReference Include="Shiny.Localization" Version="1.0.0" />
     <PackageReference Include="Shiny.Logging.AppCenter" Version="1.1.0.1570" />
     <PackageReference Include="Shiny.Prism" Version="7.2.0.1054" />
-    <PackageReference Include="Xamarin.Essentials.Interfaces" Version="1.5.3.1" />
-    <PackageReference Include="Xamarin.Forms" Version="4.6.0.726" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.1" />
-    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.6.0.726" />
+    <PackageReference Include="Xamarin.Essentials.Interfaces" Version="1.5.3.2" />
+    <PackageReference Include="Xamarin.Forms" Version="4.6.0.800" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.6.0.800" />
   </ItemGroup>
 
   <ItemGroup>
@@ -57,6 +57,9 @@
   <ItemGroup>
     <Compile Update="Resources\Dictionaries\Colors.xaml.cs">
       <DependentUpon>Colors.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Resources\Dictionaries\ControlTemplates.xaml.cs">
+      <DependentUpon>ControlTemplates.xaml</DependentUpon>
     </Compile>
     <Compile Update="Resources\Dictionaries\Fonts.xaml.cs">
       <DependentUpon>Fonts.xaml</DependentUpon>
@@ -84,6 +87,12 @@
     <Compile Update="Views\Debug_ImagesListPage.xaml.cs">
       <DependentUpon>Debug_ImagesListPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\HomePage.xaml.cs">
+      <DependentUpon>HomePage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\StartupPage.xaml.cs">
+      <DependentUpon>StartupPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -109,10 +118,16 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>MobileTextResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Cells\SelectableCellBase.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Debug_ImagesListPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\MDPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\StartupPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\SamplePage.xaml">
