--- a/Templates/Template.Resources/Template.Resources.csproj
+++ b/Templates/Template.Resources/Template.Resources.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.4" />
     <PackageReference Include="Resizetizer.NT" Version="0.2.0" />
   </ItemGroup>
 
@@ -32,7 +32,10 @@
     <SharedImage Include="Images\Generic_Images\splash_background.png" BaseSize="360, 640" />
     <SharedImage Include="Images\Generic_Images\background_blur.png" BaseSize="360, 640" />
     <SharedImage Include="Images\Generic_Images\background_darkblur.png" BaseSize="360, 640" />
-    <SharedImage Include="Images\Material_icons\ic_menu.svg" BaseSize="48, 48" TintColor="#FFFFFF" />
+	<SharedImage Include="Images\Generic_Images\menu_background_dark.png" BaseSize="360, 203" />
+    <SharedImage Include="Images\Generic_Images\menu_background_light.png" BaseSize="360, 203"/>
+    <SharedImage Include="Images\Material_icons\ic_menu.svg" BaseSize="48, 48" TintColor="#FFFFFFFF" />
+    <SharedImage Include="Images\Material_icons\ic_exit_to_app.svg" BaseSize="48, 48" TintColor="#FFFFFFFF" />
     
     <!-- Generic All Material Icons -->
     <SharedImage Include="Images\Material_icons\ic_3d_rotation.svg" BaseSize="48, 48" TintColor="#FFBB2734" />
@@ -312,7 +315,7 @@
     <SharedImage Include="Images\Material_icons\ic_event_note.svg" BaseSize="48, 48" TintColor="#FFBB2734" />
     <SharedImage Include="Images\Material_icons\ic_event_seat.svg" BaseSize="48, 48" TintColor="#FFBB2734" />
     <SharedImage Include="Images\Material_icons\ic_ev_station.svg" BaseSize="48, 48" TintColor="#FFBB2734" />
-    <SharedImage Include="Images\Material_icons\ic_exit_to_app.svg" BaseSize="48, 48" TintColor="#FFBB2734" />
+    <!--<SharedImage Include="Images\Material_icons\ic_exit_to_app.svg" BaseSize="48, 48" TintColor="#FFBB2734" />-->
     <SharedImage Include="Images\Material_icons\ic_expand_less.svg" BaseSize="48, 48" TintColor="#FFBB2734" />
     <SharedImage Include="Images\Material_icons\ic_expand_more.svg" BaseSize="48, 48" TintColor="#FFBB2734" />
     <SharedImage Include="Images\Material_icons\ic_explicit.svg" BaseSize="48, 48" TintColor="#FFBB2734" />
