--- a/Templates/Template.Mobile.Android/Template.Mobile.Android.csproj
+++ b/Templates/Template.Mobile.Android/Template.Mobile.Android.csproj
@@ -79,6 +79,9 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>7.1.0.442</Version>
     </PackageReference>
+    <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie">
+      <Version>3.1.2</Version>
+    </PackageReference>
     <PackageReference Include="glidex.forms">
       <Version>2.0.1.394</Version>
     </PackageReference>
@@ -104,10 +107,10 @@
       <Version>1.6.0</Version>
     </PackageReference>
     <PackageReference Include="Shiny.Core">
-      <Version>1.1.0.1570</Version>
+      <Version>1.2.0.1686</Version>
     </PackageReference>
     <PackageReference Include="Shiny.Logging.AppCenter">
-      <Version>1.1.0.1570</Version>
+      <Version>1.2.0.1686</Version>
     </PackageReference>
     <PackageReference Include="Shiny.Prism">
       <Version>7.2.0.1054</Version>
@@ -115,10 +118,10 @@
     <PackageReference Include="Xamarin.Essentials.Interfaces">
       <Version>1.5.3.2</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.6.0.800" />
+    <PackageReference Include="Xamarin.Forms" Version="4.6.0.847" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.Forms.Visual.Material">
-      <Version>4.6.0.800</Version>
+      <Version>4.6.0.847</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -143,6 +146,7 @@
     <AndroidAsset Include="Assets\Roboto-Regular.ttf" />
     <AndroidAsset Include="Assets\Roboto-SemiBold.ttf" />
     <AndroidAsset Include="Assets\Roboto-SemiBoldItalic.ttf" />
+    <AndroidAsset Include="Assets\LoadingViewLottie.json" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
