--- a/Templates/Template.Mobile.iOS/Template.Mobile.iOS.csproj
+++ b/Templates/Template.Mobile.iOS/Template.Mobile.iOS.csproj
@@ -161,6 +161,9 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>7.1.0.442</Version>
     </PackageReference>
+    <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie">
+      <Version>3.1.2</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
       <Version>3.1.4</Version>
     </PackageReference>
@@ -180,10 +183,10 @@
       <Version>1.6.0</Version>
     </PackageReference>
     <PackageReference Include="Shiny.Core">
-      <Version>1.1.0.1570</Version>
+      <Version>1.2.0.1686</Version>
     </PackageReference>
     <PackageReference Include="Shiny.Logging.AppCenter">
-      <Version>1.1.0.1570</Version>
+      <Version>1.2.0.1686</Version>
     </PackageReference>
     <PackageReference Include="Shiny.Prism">
       <Version>7.2.0.1054</Version>
@@ -191,13 +194,13 @@
     <PackageReference Include="Xamarin.Essentials.Interfaces">
       <Version>1.5.3.2</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.6.0.800" />
+    <PackageReference Include="Xamarin.Forms" Version="4.6.0.847" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.Forms.Nuke">
       <Version>8.4.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms.Visual.Material">
-      <Version>4.6.0.800</Version>
+      <Version>4.6.0.847</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
