--- a/Templates/Template.Mobile.iOS/Template.Mobile.iOS.csproj
+++ b/Templates/Template.Mobile.iOS/Template.Mobile.iOS.csproj
@@ -104,6 +104,7 @@
     <BundleResource Include="Resources\Font\Roboto-SemiBoldItalic.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </BundleResource>
+    <BundleResource Include="Resources\LoadingViewLottie.json" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -166,7 +167,7 @@
       <Version>3.1.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
-      <Version>3.1.4</Version>
+      <Version>3.1.5</Version>
     </PackageReference>
     <PackageReference Include="Prism.Forms.Extended">
       <Version>7.2.0.1054</Version>
