--- a/Templates/Template.Mobile/Template.Mobile.csproj
+++ b/Templates/Template.Mobile/Template.Mobile.csproj
@@ -32,13 +32,13 @@
     <PackageReference Include="Acr.UserDialogs" Version="7.1.0.442" />
     <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie" Version="3.1.2" />
     <PackageReference Include="HttpTracer" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.5" />
     <PackageReference Include="Nito.AsyncEx" Version="5.0.0" />
     <PackageReference Include="Prism.Forms.Extended" Version="7.2.0.1054" />
-    <PackageReference Include="Prism.Forms.LazyView" Version="1.1.0" />
     <PackageReference Include="Prism.Microsoft.DependencyInjection.Extensions" Version="7.2.0.1054" />
     <PackageReference Include="Prism.Plugin.Popups" Version="7.2.0.1046" />
-    <PackageReference Include="ReactiveUI.Fody" Version="11.4.1" />
+    <PackageReference Include="ReactiveUI.Fody" Version="11.4.17" />
     <PackageReference Include="Refit.HttpClientFactory" Version="5.1.67" />
     <PackageReference Include="Resizetizer.NT" Version="0.2.0" />
     <PackageReference Include="Sharpnado.Presentation.Forms" Version="1.6.0" />
@@ -53,6 +53,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Prism.Forms.LazyView2\Prism.Forms.LazyView\Prism.Forms.LazyView.csproj" />
     <ProjectReference Include="..\Template.Resources\Template.Resources.csproj" />
   </ItemGroup>
 
