--- a/Templates/Template.Mobile.Android/Template.Mobile.Android.csproj
+++ b/Templates/Template.Mobile.Android/Template.Mobile.Android.csproj
@@ -115,6 +115,9 @@
     <PackageReference Include="Shiny.Prism">
       <Version>7.2.0.1054</Version>
     </PackageReference>
+    <PackageReference Include="Shiny.Push.FirebaseMessaging">
+      <Version>1.2.0.1686-beta</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Essentials.Interfaces">
       <Version>1.5.3.2</Version>
     </PackageReference>
@@ -122,6 +125,9 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.Forms.Visual.Material">
       <Version>4.6.0.847</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.GooglePlayServices.Basement">
+      <Version>71.1620.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -147,6 +153,7 @@
     <AndroidAsset Include="Assets\Roboto-SemiBold.ttf" />
     <AndroidAsset Include="Assets\Roboto-SemiBoldItalic.ttf" />
     <AndroidAsset Include="Assets\LoadingViewLottie.json" />
+    <GoogleServicesJson Include="google-services.json" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
