--- a/Templates/Template.Mobile.iOS/Template.Mobile.iOS.csproj
+++ b/Templates/Template.Mobile.iOS/Template.Mobile.iOS.csproj
@@ -192,6 +192,9 @@
     <PackageReference Include="Shiny.Prism">
       <Version>7.2.0.1054</Version>
     </PackageReference>
+    <PackageReference Include="Shiny.Push.FirebaseMessaging">
+      <Version>1.2.0.1686-beta</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Essentials.Interfaces">
       <Version>1.5.3.2</Version>
     </PackageReference>
