--- a/Templates/Template.Mobile/Template.Mobile.csproj
+++ b/Templates/Template.Mobile/Template.Mobile.csproj
@@ -17,6 +17,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Interfaces\**" />
+    <EmbeddedResource Remove="Interfaces\**" />
+    <None Remove="Interfaces\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Services\Settings\App\appsettings.json" />
     <None Remove="Services\Settings\App\Debug\appsettings.json" />
     <None Remove="Services\Settings\App\Release\appsettings.json" />
@@ -46,6 +52,7 @@
     <PackageReference Include="Shiny.Localization" Version="1.0.0" />
     <PackageReference Include="Shiny.Logging.AppCenter" Version="1.2.0.1686" />
     <PackageReference Include="Shiny.Prism" Version="7.2.0.1054" />
+    <PackageReference Include="Shiny.Push.FirebaseMessaging" Version="1.2.0.1686-beta" />
     <PackageReference Include="Xamarin.Essentials.Interfaces" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.847" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
@@ -57,6 +64,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\ContentPages\PushSetupPage.xaml.cs">
+      <DependentUpon>PushSetupPage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Resources\Dictionaries\Colors.xaml.cs">
       <DependentUpon>Colors.xaml</DependentUpon>
     </Compile>
@@ -104,6 +114,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Push\CommandCell.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Push\EventListPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Push\PushPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\ContentPages\PushSetupPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Resources\Dictionaries\Colors.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
@@ -144,9 +166,5 @@
     <EmbeddedResource Update="Views\TabPages\Debug_BottomTabsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Interfaces\" />
   </ItemGroup>
 </Project>
