--- a/Templates/Template.Mobile.Android/Template.Mobile.Android.csproj
+++ b/Templates/Template.Mobile.Android/Template.Mobile.Android.csproj
@@ -120,6 +120,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.967" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="Xamarin.Forms.DebugRainbows">
+      <Version>1.1.4</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms.Visual.Material">
       <Version>4.6.0.967</Version>
     </PackageReference>
