--- a/Templates/Template.Mobile.iOS/Template.Mobile.iOS.csproj
+++ b/Templates/Template.Mobile.iOS/Template.Mobile.iOS.csproj
@@ -198,6 +198,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.967" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="Xamarin.Forms.DebugRainbows">
+      <Version>1.1.4</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms.Nuke">
       <Version>8.4.0</Version>
     </PackageReference>
