--- a/Templates/Template.Mobile/Template.Mobile.csproj
+++ b/Templates/Template.Mobile/Template.Mobile.csproj
@@ -57,6 +57,7 @@
     <PackageReference Include="Xamarin.Essentials.Interfaces" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.967" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="Xamarin.Forms.DebugRainbows" Version="1.1.4" />
     <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.6.0.967" />
   </ItemGroup>
 
@@ -109,6 +110,9 @@
     <Compile Update="Views\DEBUG\Debug_SamplesView.xaml.cs">
       <DependentUpon>Debug_SamplesView.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Walkthrough\WalkThroughPage.xaml.cs">
+      <DependentUpon>WalkThroughPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -151,6 +155,12 @@
     </EmbeddedResource>
     <EmbeddedResource Update="Views\DEBUG\Debug_BottomTabsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Walkthrough\WalkThroughItemTemplate.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Walkthrough\WalkThroughPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
   </ItemGroup>
 </Project>
