--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,5 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+/Templates/Template.Mobile.Android/google-services.json
+Templates/Template.Mobile.Android/google-services.json
