--- a/Templates/SolutionTemplate/SolutionTemplate.csproj
+++ b/Templates/SolutionTemplate/SolutionTemplate.csproj
@@ -55,25 +55,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Content Include="Template.Mobile.Android\MainActivity.cs" />
-    <Content Include="Template.Mobile.Android\MainApplication.cs" />
-    <Content Include="Template.Mobile.Android\Properties\AssemblyInfo.cs" />
-    <Content Include="Template.Mobile.Android\Renderers\AndroidMaterialDatePickerRenderer.cs" />
-    <Content Include="Template.Mobile.Android\Renderers\AndroidMaterialStepperRenderer.cs" />
-    <Content Include="Template.Mobile.Android\Renderers\AndroidMaterialTimePickerRenderer.cs" />
-    <Content Include="Template.Mobile.Android\Resources\Resource.designer.cs" />
-    <Content Include="Template.Mobile.Android\Services\PlatformThemeService.cs" />
-    <Content Include="Template.Mobile.Android\SplashActivity.cs" />
-    <Content Include="Template.Mobile.Android\Assets\AboutAssets.txt" />
-    <Content Include="Template.Mobile.Android\Properties\AndroidManifest.xml" />
-    <Content Include="Template.Mobile.Android\Resources\AboutResources.txt" />
-    <Content Include="Template.Mobile.Android\Resources\drawable\splashscreen.xml" />
-    <Content Include="Template.Mobile.Android\Resources\layout\Tabbar.xml" />
-    <Content Include="Template.Mobile.Android\Resources\layout\Toolbar.xml" />
-    <Content Include="Template.Mobile.Android\Resources\values\colors.xml" />
-    <Content Include="Template.Mobile.Android\Resources\values\styles.xml" />
-    <Content Include="Template.Mobile.Android\Template.Mobile.Android.vstemplate" />
-    <Content Include="Template.Mobile.Android\__TemplateIcon.ico" />
+    <Content Include="Template.Mobile.Droid\MainActivity.cs" />
+    <Content Include="Template.Mobile.Droid\MainApplication.cs" />
+    <Content Include="Template.Mobile.Droid\Properties\AssemblyInfo.cs" />
+    <Content Include="Template.Mobile.Droid\Renderers\AndroidMaterialDatePickerRenderer.cs" />
+    <Content Include="Template.Mobile.Droid\Renderers\AndroidMaterialStepperRenderer.cs" />
+    <Content Include="Template.Mobile.Droid\Renderers\AndroidMaterialTimePickerRenderer.cs" />
+    <Content Include="Template.Mobile.Droid\Resources\Resource.designer.cs" />
+    <Content Include="Template.Mobile.Droid\Services\PlatformThemeService.cs" />
+    <Content Include="Template.Mobile.Droid\SplashActivity.cs" />
+    <Content Include="Template.Mobile.Droid\Assets\AboutAssets.txt" />
+    <Content Include="Template.Mobile.Droid\Properties\AndroidManifest.xml" />
+    <Content Include="Template.Mobile.Droid\Resources\AboutResources.txt" />
+    <Content Include="Template.Mobile.Droid\Resources\drawable\splashscreen.xml" />
+    <Content Include="Template.Mobile.Droid\Resources\layout\Tabbar.xml" />
+    <Content Include="Template.Mobile.Droid\Resources\layout\Toolbar.xml" />
+    <Content Include="Template.Mobile.Droid\Resources\values\colors.xml" />
+    <Content Include="Template.Mobile.Droid\Resources\values\styles.xml" />
+    <Content Include="Template.Mobile.Droid\Template.Mobile.Droid.vstemplate" />
+    <Content Include="Template.Mobile.Droid\__TemplateIcon.ico" />
     <Content Include="Template.Mobile.iOS\AppDelegate.cs" />
     <Content Include="Template.Mobile.iOS\Assets.xcassets\AppIcon.appiconset\Icon1024.png" />
     <Content Include="Template.Mobile.iOS\Assets.xcassets\AppIcon.appiconset\Icon120.png" />
@@ -1257,18 +1257,18 @@
     <Content Include="Template.Mobile.iOS\Assets.xcassets\AppIcon.appiconset\Contents.json" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Template.Mobile.Android\Assets\LoadingViewLottie.json" />
-    <Content Include="Template.Mobile.Android\Assets\Roboto-Bold.ttf" />
-    <Content Include="Template.Mobile.Android\Assets\Roboto-BoldItalic.ttf" />
-    <Content Include="Template.Mobile.Android\Assets\Roboto-ExtraBold.ttf" />
-    <Content Include="Template.Mobile.Android\Assets\Roboto-ExtraBoldItalic.ttf" />
-    <Content Include="Template.Mobile.Android\Assets\Roboto-Italic.ttf" />
-    <Content Include="Template.Mobile.Android\Assets\Roboto-Light.ttf" />
-    <Content Include="Template.Mobile.Android\Assets\Roboto-LightItalic.ttf" />
-    <Content Include="Template.Mobile.Android\Assets\Roboto-Regular.ttf" />
-    <Content Include="Template.Mobile.Android\Assets\Roboto-SemiBold.ttf" />
-    <Content Include="Template.Mobile.Android\Assets\Roboto-SemiBoldItalic.ttf" />
-    <Content Include="Template.Mobile.Android\Template.Mobile.Android.csproj" />
+    <Content Include="Template.Mobile.Droid\Assets\LoadingViewLottie.json" />
+    <Content Include="Template.Mobile.Droid\Assets\Roboto-Bold.ttf" />
+    <Content Include="Template.Mobile.Droid\Assets\Roboto-BoldItalic.ttf" />
+    <Content Include="Template.Mobile.Droid\Assets\Roboto-ExtraBold.ttf" />
+    <Content Include="Template.Mobile.Droid\Assets\Roboto-ExtraBoldItalic.ttf" />
+    <Content Include="Template.Mobile.Droid\Assets\Roboto-Italic.ttf" />
+    <Content Include="Template.Mobile.Droid\Assets\Roboto-Light.ttf" />
+    <Content Include="Template.Mobile.Droid\Assets\Roboto-LightItalic.ttf" />
+    <Content Include="Template.Mobile.Droid\Assets\Roboto-Regular.ttf" />
+    <Content Include="Template.Mobile.Droid\Assets\Roboto-SemiBold.ttf" />
+    <Content Include="Template.Mobile.Droid\Assets\Roboto-SemiBoldItalic.ttf" />
+    <Content Include="Template.Mobile.Droid\Template.Mobile.Droid.csproj" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
