--- a/Templates/SolutionTemplate/Template.Mobile.Droid/Template.Mobile.Droid.csproj
+++ b/Templates/SolutionTemplate/Template.Mobile.Droid/Template.Mobile.Droid.csproj
@@ -8,7 +8,7 @@
     <TemplateGuid>{c9e5eea5-ca05-42a1-839b-61506e0a37df}</TemplateGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>$safeprojectname$</RootNamespace>
-    <AssemblyName>$ext_safeprojectname$.Mobile.Android</AssemblyName>
+    <AssemblyName>$safeprojectname$</AssemblyName>
     <Deterministic>True</Deterministic>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
@@ -119,10 +119,12 @@
     <PackageReference Include="Xamarin.Essentials.Interfaces">
       <Version>1.5.3.2</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms"/>
-    <Version>4.6.0.967</Version>
-    <PackageReference Include="Xamarin.Essentials"/>
+    <PackageReference Include="Xamarin.Forms">
+      <Version>4.6.0.967</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Essentials">
     <Version>1.5.3.2</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms.DebugRainbows">
       <Version>1.1.4</Version>
     </PackageReference>
@@ -166,15 +168,13 @@
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
-  <!--<ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\$ext_safeprojectname$.Mobile\$ext_safeprojectname$.Mobile.csproj">
-      <Project>{fdbca5b6-1604-4494-99b7-a0693064b35c}</Project>
       <Name>$ext_safeprojectname$.Mobile</Name>
     </ProjectReference>
     <ProjectReference Include="..\$ext_safeprojectname$.Resources\$ext_safeprojectname$.Resources.csproj">
-      <Project>{e3c601c5-fdad-455e-a210-53081b9c1532}</Project>
       <Name>$ext_safeprojectname$.Resources</Name>
     </ProjectReference>
-  </ItemGroup>-->
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
