--- a/Templates/SolutionTemplate/Template.Mobile.iOS/Info.plist
+++ b/Templates/SolutionTemplate/Template.Mobile.iOS/Info.plist
@@ -23,15 +23,15 @@
     <key>MinimumOSVersion</key>
     <string>8.0</string>
     <key>CFBundleDisplayName</key>
-    <string>$safeprojectname$</string>
+    <string>$ext_safeprojectname$</string>
     <key>CFBundleIdentifier</key>
-    <string>com.companyname.$safeprojectname$</string>
+    <string>com.companyname.$ext_safeprojectname$</string>
     <key>CFBundleVersion</key>
     <string>1.0</string>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>CFBundleName</key>
-    <string>$safeprojectname$</string>
+    <string>$ext_safeprojectname$</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
   <key>UIBackgroundModes</key>
