--- a/Sample/Template.Mobile.Droid/Template.Mobile.Droid.csproj
+++ b/Sample/Template.Mobile.Droid/Template.Mobile.Droid.csproj
@@ -63,8 +63,7 @@
     <AndroidUseAapt2>true</AndroidUseAapt2>
     <AndroidCreatePackagePerAbi>false</AndroidCreatePackagePerAbi>
     <JavaMaximumHeapSize>2G</JavaMaximumHeapSize>
-    <AndroidLinkTool>r8</AndroidLinkTool>
-    <AndroidDexTool>dx</AndroidDexTool>
+    <AndroidDexTool>d8</AndroidDexTool>
     <AndroidEnableMultiDex>true</AndroidEnableMultiDex>
   </PropertyGroup>
   <ItemGroup>
@@ -171,6 +170,9 @@
       <Project>{e3c601c5-fdad-455e-a210-53081b9c1532}</Project>
       <Name>Template.Resources</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\appicon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
