--- a/Sample/Template.Mobile.iOS/Template.Mobile.iOS.csproj
+++ b/Sample/Template.Mobile.iOS/Template.Mobile.iOS.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="Renderers\iOSWTTabbedPageRenderer.cs" />
     <Compile Include="Renderers\iOSMaterialStepperRenderer.cs" />
     <Compile Include="Renderers\iOSMaterialDatePickerRenderer.cs" />
     <Compile Include="Renderers\iOSMaterialTimePickerRenderer.cs" />
