--- a/Sample/Template.Mobile/Template.Mobile.csproj
+++ b/Sample/Template.Mobile/Template.Mobile.csproj
@@ -143,6 +143,9 @@
     <EmbeddedResource Update="CustomCtrl\LoadingView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\SecondWTPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\StartupPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
