--- a/Templates/SolutionTemplate/Template.Mobile.Droid/Template.Mobile.Droid.csproj
+++ b/Templates/SolutionTemplate/Template.Mobile.Droid/Template.Mobile.Droid.csproj
@@ -87,6 +87,9 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
       <Version>3.1.6</Version>
     </PackageReference>
+    <PackageReference Include="Prism.Microsoft.DependencyInjection.Extensions">
+      <Version>7.2.0.1054</Version>
+    </PackageReference>
     <PackageReference Include="Plugin.CurrentActivity">
       <Version>2.1.0.4</Version>
     </PackageReference>
