--- a/Templates/SolutionTemplate/Template.Mobile.iOS/Template.Mobile.iOS.csproj
+++ b/Templates/SolutionTemplate/Template.Mobile.iOS/Template.Mobile.iOS.csproj
@@ -169,6 +169,9 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
       <Version>3.1.6</Version>
     </PackageReference>
+    <PackageReference Include="Prism.Microsoft.DependencyInjection.Extensions">
+      <Version>7.2.0.1054</Version>
+    </PackageReference>
     <PackageReference Include="Prism.Forms.Extended">
       <Version>7.2.0.1054</Version>
     </PackageReference>
